# autosharding

./: Cargo.toml  README.md  build.rs
autosharding-client/: Cargo.toml  build.rs
autosharding-client/src/: client.rs  lib.rs
autosharding-server/: Cargo.toml  Dockerfile  README.md
autosharding-server/src/: main.rs  service.rs
autosharding-server/src/sys/: mod.rs
proto/: service.proto
proto/auto_sharding/v1/: auto_sharding.proto
src/: main.rs  service.rs
src/sys/: mod.rs
